2016-12-18  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/TempMessage.cpp (TempMessage): using DejaVuSans-10-NoScale
	make the messages appear again.
	* src/client/GameEngine.cpp (initialiseCegui): move the try/catch
	of the font exception into TempMessage.cpp.

2016-12-14  Jérôme Pasquier  <rainbru@free.fr>

	* media/cegui-orig/fonts.zip: add media/fonts filesystem.

	* media/cegui-orig/fonts.zip: extract DejaVu-12 fonts.

2016-12-12  Jérôme Pasquier  <rainbru@free.fr>

	* src/logger/LoggerOutputYaml.cpp: update doxygen documentation.

2016-12-07  Jérôme Pasquier  <rainbru@free.fr>
	* src/client/TempMessage.cpp: add a static logger.

	* src/client/GameEngine.cpp (initialiseCegui): found the cause of
	the font exception.
	* src/client/GameEngine.cpp (run): isolation of the CEGUI font
	exception.

	* media/schemes/TaharezLook.scheme: extracted from schemes.zip to be
	modified.
	* media/cegui-orig/Makefile.am: remove unneeded old file.
	* ROADMAP: new section for actual GUI work.

	* src/logger/ObjectAttribute.hpp: update doxygen documentation.
	* src/logger/ObjectAttribute.hpp: add const qualifier to getters.

2016-11-25  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (keyPressed): handle Alt++/Alt+- to change
	resolution.
	* src/client/GameEngine.cpp (getPreviousResolution): get the previous
	available resolution from Ogre.
	* src/client/GameEngine.cpp (getNextResolution): get the next available
	resolution from Ogre.

	* src/client/GameEngine.cpp (reconfigure): mCfgOverride cleaned after
	override.
	* src/client/GameEngine.hpp (toFullscreen): removed.

	* src/client/GameEngine.hpp (mRestartMessage): to-be-printed message
	after reconfigure is now a member.
	* src/client/GameEngine.hpp (mCfgOverride): new ogre configuration
	overriding map.

	* src/client/OgreCfgSaver.cpp: new class used to serialize new
	Ogre configuration after fullscreen switch.
	* src/client/GameEngine.cpp (keyPressed): taking a screenshot now