@@ -143,6 +143,7 @@ set (client-src
   src/client/MainMenu.cpp
   src/client/NyiDialog.cpp
   src/client/OgreCfgSaver.cpp
+  src/client/ResolutionHandler.cpp
   src/client/StateManager.cpp
   src/client/StateSaver.cpp
   src/client/TempMessage.cpp
